--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html>
 
    <head>
-      <title>API for Timestamp | Request Header | URL Shortener | Image Search | File Metadata </title>
+      <title>Request Header Microservice</title>
       <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Paris_RER_B_icon.svg/92px-Paris_RER_B_icon.svg.png" type="image/x-icon"/>
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" type="text/css">
       <link href="/public/style.css" rel="stylesheet" type="text/css">
@@ -11,48 +11,14 @@
    <body>
       <div class="container">
          <h1>Microservices with Node.js </h1>
-         <h3>
-        Timestamp Microservice </h3>
-
-        <p>
-          I can pass a string as a parameter, and it will check to see whether that string contains either a unix timestamp or a natural language date (example: January 1, 2016).
-        </p>
-        <h5>Example:
-        </h5>
-         <p>    https://fccapi.glitch.me/timestamp/December%2015,%202015         <br>
-             https://fccapi.glitch.me/timestamp/1450137600</p>
-        </div>
      
-     <div class="container">
 <h3>Request Header Parser Microservice </h3>
   <h5>Example:
         </h5>
-         <p>    https://fccapi.glitch.me/request/    </p>
+         <p>    https://bbx-whoami.glitch.me/x    </p>
      </div>
      
-     
-     <div class="container">
-<h3>URL Shortener Microservice </h3>
-  <h5>Example:
-        </h5>
-         <p>    https://fccapi.glitch.me/shorturl/   </p>
-     </div>
-     
-     
-     <div class="container">
-<h3>Image Search Abstraction Layer </h3>
-  <h5>Example:
-        </h5>
-         <p>    https://fccapi.glitch.me/imagesearch/  </p>
-     </div>
-     
-     
-     <div class="container">
-<h3>File Metadata Microservice </h3>
-        <h5>Example:
-        </h5>
-         <p>    https://fccapi.glitch.me/filemeta/    </p>
-      </div>
+      
    </body>
 
 </html>
